--- a/Week8/Day2/07-html-templating/package.json
+++ b/Week8/Day2/07-html-templating/package.json
@@ -6,13 +6,17 @@
     "scripts": {
         "test": "cypress run --spec 'cypress/integration/basic-spec.js,cypress/integration/bonus-spec.js'",
         "test-basic": "cypress run --spec 'cypress/integration/basic-spec.js'",
-        "test-bonus": "cypress run --spec 'cypress/integration/bonus-spec.js'"
+        "test-bonus": "cypress run --spec 'cypress/integration/bonus-spec.js'",
+        "start": "nodemon server.js"
     },
     "dependencies": {
-      "cypress": "^9.7.0",
-      "chai": "^4.3.6",
-      "mocha": "^10.0.0"
+        "chai": "^4.3.6",
+        "cypress": "^9.7.0",
+        "mocha": "^10.0.0"
     },
     "author": "curriculum@appacademy.io",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
